# OpenENV-Hackathon

./: .gitattributes  .gitignore  README.md  frameReader.py  mango_trainer.py  opponents.py  package-lock.json  package.json  requirements.txt  sanity_check.py  train.py  upload_to_hf.py
emulator_env/: .env.example  README.md  __init__.py  client.py  docker-entrypoint.sh  dolphin_train.py  melee_constants.py  melee_physics.py  menu_nav.py  models.py  openenv.yaml  policy_runner.py  pyproject.toml  state.py  test_client.py  train_emulator.py
emulator_env/server/: Dockerfile  __init__.py  app.py  emulator_env_environment.py  requirements.txt
envs/: __init__.py  melee_sim_env.py  melee_torchrl_env.py
physics/: __init__.py  constants.py  melee_physics.py  simulator.py  state.py
rewards/: __init__.py  competitive.py  puff.py
